# Cryptoprotocols

./: CMakeLists.txt  README.md  auxiliary.hpp  crc.hpp  main.cpp
lab1/: LSX.cpp  LSX.hpp  README.md
lab2/: README.md  Streebog.cpp  Streebog.hpp  hmac.cpp  hmac.hpp
lab3/: CSPRNG.hpp  README.md
lab4/: CRISP.hpp
